# el-stat-prop-kit

el_stat_prop_kit--project-dir/: CMakeLists.txt  run_test  (+1 more)
el_stat_prop_kit--project-dir/el_stat_prop_kit/: CMakeLists.txt
el_stat_prop_kit--project-dir/el_stat_prop_kit/executable/: CMakeLists.txt
el_stat_prop_kit--project-dir/el_stat_prop_kit/executable/src/: main.cpp
el_stat_prop_kit--project-dir/el_stat_prop_kit/include/el_stat_prop_kit/: adapter.hpp  bit_from_tag.hpp  direction_enum.hpp  fixed_systems_adapters.hpp  fragment_property_bit.hpp  fragment_property_tag.hpp  fragments_bits.hpp  fragments_tags.hpp  multiplied_property_bit.hpp  multiplied_property_tag.hpp  popular_bits_lists.hpp  properties_bits.hpp  properties_tags.hpp  reference_points_bits.hpp  reference_points_tags.hpp  simple_system_adapter.hpp  tag_abstract_base.hpp  tag_from_string.hpp  transform_raw_quadrupole_into_traceless_quadupole.hpp  using_self_type_macro.hpp
el_stat_prop_kit--project-dir/el_stat_prop_kit/src/: adapter.cpp  direction_enum.cpp  fixed_systems_adapters.cpp  fragment_property_bit.cpp  fragment_property_tag.cpp  fragments_bits.cpp  fragments_tags.cpp  multiplied_property_bit.cpp  multiplied_property_tag.cpp  popular_bits_lists.cpp  properties_bits.cpp  properties_tags.cpp  reference_points_bits.cpp  reference_points_tags.cpp  simple_system_adapter.cpp  transform_raw_quadrupole_into_traceless_quadupole.cpp
el_stat_prop_kit--project-dir/el_stat_prop_kit/test/: CMakeLists.txt
el_stat_prop_kit--project-dir/el_stat_prop_kit/test/include/: bit_examples.hpp  tag_examples.hpp
(+8 files in other folders)
